# jav_guru_migration-repack

./: .env.template  .gitignore  .pre-commit-config.yaml  .rsync-exclude  Dockerfile  README.md  docker-compose.yml  formatting.sh  pyproject.toml  requirements.txt
.github/envs/: .env.test
.github/workflows/: ci.yml  lint.yml
app/: config.py  kvs_range.json  logger.py  main.py  send_tasks.py
app/db/: database.py  exports.py  models.py
app/download/: csv_dump.py  downloader.py  exceptions.py  service.py  thumbnails.py  utils.py
app/google_export/: exc.py  export.py  gsheets.py
app/infra/: kvs.py  kvs_cleanup.py  kvs_range.json  proxy_manager.py  queue.py  s3.py  title_generator.py  worker.py
app/parser/: base.py  crawl.py  current_range.json  driver.py  interactions.py  service.py
app/parser/sites/: guru.py  javct.py  javtiful.py
app/tests/: conftest.py  test_download.py  test_guru_downloader.py  test_video_model.py
app/tests/mocks/: download_source.json  video_source.json
app/utils/: csv_dump.py
scripts/: build.sh  cleanup_duplicates.py
tests/: conftest.py  test_download.py  test_guru_downloader.py  test_video_model.py
tests/mocks/: download_source.json
