[tool.ruff]
line-length = 120
extend-exclude = ["app/alembic/*"]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.isort]
line_length = 120

[tool.poetry]
name = "javguru-parser"
version = "0.1.0"
description = "Parser and downloader for Jav Guru"
authors = ["Mark Safin <samangelofw@gmail.com>"]
# readme = "README.md"
packages = [{ include = "app" }]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiobotocore = "2.13.2"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
aioitertools = "0.11.0"
aiosignal = "1.3.1"
amqp = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
appier = "1.34.3"
attrs = "23.2.0"
beanie = "1.25.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
botocore = "1.34.131"
cachetools = "5.3.3"
celery = "5.3.6"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
Deprecated = "1.2.14"
dnspython = "2.6.1"
email_validator = "2.1.1"
fake-useragent = "1.5.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.2"
frozenlist = "1.4.1"
google = "3.0.0"
google-api = "0.1.12"
google-api-core = "2.19.0"
google-api-python-client = "2.120.0"
google-auth = "2.28.1"
google-auth-httplib2 = "0.2.0"
googleapis-common-protos = "1.63.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
importlib-metadata = "7.0.0"
isort = "5.13.2"
Jinja2 = "3.1.3"
jmespath = "1.0.1"
kombu = "5.3.4"
lazy-model = "0.2.0"
logfire = "0.30.0"
loguru = "0.7.2"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
motor = "3.4.0"
multidict = "6.0.5"
numpy = "1.26.4"
opencv-python = "4.9.0.80"
opentelemetry-api = "1.24.0"
opentelemetry-exporter-otlp-proto-common = "1.24.0"
opentelemetry-exporter-otlp-proto-http = "1.24.0"
opentelemetry-instrumentation = "0.45b0"
opentelemetry-proto = "1.24.0"
opentelemetry-sdk = "1.24.0"
opentelemetry-semantic-conventions = "0.45b0"
orjson = "3.10.2"
outcome = "1.3.0.post0"
prompt-toolkit = "3.0.43"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1_modules = "0.4.0"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
pydantic_core = "2.18.2"
Pygments = "2.17.2"
pymongo = "4.6.3"
pyparsing = "3.1.2"
PySocks = "1.7.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
PyYAML = "6.0.1"
redis = "5.0.4"
requests = "2.31.0"
rich = "13.7.1"
rsa = "4.9"
ruff = "0.5.7"
pre-commit = "^4.0.1"
selenium = "4.19.0"
selenium-stealth = "1.0.6"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
starlette = "0.37.2"
toml = "0.10.2"
tqdm = "4.66.2"
trio = "0.25.0"
trio-websocket = "0.11.1"
typer = "0.12.3"
typing_extensions = "4.11.0"
tzdata = "2024.1"
ujson = "5.9.0"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
uvloop = "0.19.0"
undetected-chromedriver = "^3.5"
vine = "5.1.0"
watchfiles = "0.21.0"
wcwidth = "0.2.13"
webdriver-manager = "4.0.2"
websockets = "12.0"
wrapt = "1.16.0"
wsproto = "1.2.0"
yarl = "1.9.4"
zipp = "3.18.1"
tenacity = "^9.1.2"
pymediainfo = "^7.0.1"
openai = "^1.109.1"